--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit==1.36.0
+rich==13.7.1
 requests>=2.31.0
 moviepy==1.0.3
 gTTS==2.5.1
@@ -6,5 +7,4 @@ imageio==2.34.0
 imageio-ffmpeg==0.4.9
 openai==1.40.2
 python-dotenv==1.0.1
-mutagen==1.47.0
 pillow<10.0
